test(concurrency): ThinLocking Test